--- a/basicCard.html
+++ b/basicCard.html
@@ -150,7 +150,7 @@
         }
         
         function openMaps() {
-            const address = '123 Heartbeat Lane, Suite 101, Wellness City, CA 90210';
+            const address = 'Virinchi Circle 8-2-672/5-6, Rd Number 1, Shyam Rao Nagar, Banjara Hills, Hyderabad, Telangana 500034';
             const encodedAddress = encodeURIComponent(address);
             window.open(`https://maps.google.com/?q=${encodedAddress}`, '_blank');
         }
