--- a/temp1.html
+++ b/temp1.html
@@ -78,6 +78,11 @@
         </div>
       </div>
     </div>
+    <div class="text-center text-sm text-gray-500 mt-4 mb-8">
+        Powered by 
+        <a href="https://StethBook.com" target="_blank" class="text-blue-600 font-medium hover:underline">StethBook</a>
+      </div>
+      
   </div>
 
   <script>
