--- a/temp1.html
+++ b/temp1.html
@@ -77,16 +77,16 @@
           </ul>
         </div>
       </div>
-      <!-- Share Button -->
+
+    </div>
+     <!-- Share Button -->
 <button
 onclick="shareCard()"
-class="mt-6 w-full flex items-center justify-center gap-2 text-sm font-medium text-blue-600  hover:bg-gray-200 rounded-b-lg py-2 transition"
+class="mt-6 w-full flex items-center justify-center gap-2 text-sm font-medium text-blue-600   rounded-b-lg py-2 transition"
 >
 <!-- <img src="https://img.icons8.com/ios-filled/20/4caf50/share-rounded.png" class="w-4 h-4" alt="Share Icon" /> -->
 Share the Card
 </button>
-
-    </div>
     <div class="text-center text-sm text-gray-500 mt-4 mb-8">
   Powered by 
   <a href="https://StethBook.com" target="_blank" class="text-blue-600 font-medium hover:underline">StethBook</a>
