--- a/temp1.html
+++ b/temp1.html
@@ -6,8 +6,8 @@
   <title>Dr. K Arvinda Sagar – Digital Visiting Card</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen bg-gradient-to-br from-gray-200 via-blue-100 to-green-100 text-gray-800">
-  <div class="px-4 sm:px-6 md:px-0">
+<body class="min-h-screen flex flex-col bg-gradient-to-br from-gray-200 via-blue-100 to-green-100 text-gray-800">
+    <main class="px-4 sm:px-6 md:px-0">
     <div class="max-w-md mx-auto mt-10 bg-white shadow-xl rounded-3xl overflow-hidden">
       <div class="p-6">
         
@@ -82,15 +82,22 @@
      <!-- Share Button -->
 <button
 onclick="shareCard()"
-class="mt-6 w-full flex items-center justify-center gap-2 text-sm font-medium text-blue-600   rounded-b-lg py-2 transition"
+class="mt-6 w-full flex items-center justify-center gap-2 text-sm font-medium text-blue-600 hover:underline  rounded-b-lg py-2 transition"
 >
 <!-- <img src="https://img.icons8.com/ios-filled/20/4caf50/share-rounded.png" class="w-4 h-4" alt="Share Icon" /> -->
 Share the Card
 </button>
-    <div class="text-center text-sm text-gray-500 mt-4 mb-8">
-  Powered by 
-  <a href="https://StethBook.com" target="_blank" class="text-blue-600 font-medium hover:underline">StethBook</a>
-</div>
+</main>
+
+<footer class="mt-auto text-center text-sm text-gray-500 mb-4">
+    Powered by 
+    <a href="https://StethBook.com" target="_blank" class="text-blue-600 font-medium hover:underline">StethBook</a>
+  </footer>
+  
+  
+  
+  
+  
 
   </div>
 
