--- a/temp1.html
+++ b/temp1.html
@@ -7,8 +7,10 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="min-h-screen flex flex-col bg-gradient-to-br from-gray-200 via-blue-100 to-green-100 text-gray-800">
-    <main class="px-4 sm:px-6 md:px-0">
-    <div class="max-w-md mx-auto mt-10 bg-white shadow-xl rounded-3xl overflow-hidden">
+
+  <!-- Main Content Container -->
+  <main class="px-4 sm:px-6 md:px-0 flex-grow flex items-center justify-center">
+    <div class="w-full max-w-md mx-auto mt-10 mb-4 bg-white shadow-xl rounded-3xl overflow-hidden">
       <div class="p-6">
         
         <!-- Profile Top -->
@@ -77,29 +79,21 @@
           </ul>
         </div>
       </div>
-     <!-- Share Button -->
-     <button
-     onclick="shareCard()"
-     class="mt-6 w-full flex items-center justify-center gap-2 text-sm font-medium text-blue-600 hover:underline  rounded-b-lg py-2 transition"
-     >
-     <!-- <img src="https://img.icons8.com/ios-filled/20/4caf50/share-rounded.png" class="w-4 h-4" alt="Share Icon" /> -->
-     Share the Card
-     </button>
+
+      <!-- Share Button -->
+      <button
+        onclick="shareCard()"
+        class="mt-6 w-full flex items-center justify-center gap-2 text-sm font-medium text-blue-600 hover:underline rounded-b-lg py-2 transition">
+        Share the Card
+      </button>
     </div>
+  </main>
 
-</main>
-
-<footer class="mt-auto text-center text-sm text-gray-500 mb-4">
+  <!-- Footer -->
+  <footer class="mt-auto text-center text-sm text-gray-500 mb-4">
     Powered by 
     <a href="https://StethBook.com" target="_blank" class="text-blue-600 font-medium hover:underline">StethBook</a>
   </footer>
-  
-  
-  
-  
-  
-
-  </div>
 
   <script>
     function toggleSchedule() {
@@ -194,21 +188,17 @@
     updateAvailabilityStatus();
     initializeBio();
 
-        //Share button functionality
-        function shareCard() {
-        const cardLink = "https://StethBook.com"; // Replace with actual card link
-        const message = `Check out Dr. K Arvinda Sagar’s digital card: ${cardLink}`;
+    function shareCard() {
+      const cardLink = "https://StethBook.com";
+      const message = `Check out Dr. K Arvinda Sagar’s digital card: ${cardLink}`;
 
-        // Copy to clipboard
-        navigator.clipboard.writeText(cardLink).then(() => {
-            console.log("Link copied to clipboard");
-        });
+      navigator.clipboard.writeText(cardLink).then(() => {
+        console.log("Link copied to clipboard");
+      });
 
-        // Open WhatsApp
-        const whatsappURL = `https://wa.me/?text=${encodeURIComponent(message)}`;
-        window.open(whatsappURL, "_blank");
-        }
-
+      const whatsappURL = `https://wa.me/?text=${encodeURIComponent(message)}`;
+      window.open(whatsappURL, "_blank");
+    }
   </script>
 </body>
 </html>
