--- a/temp1.html
+++ b/temp1.html
@@ -6,10 +6,10 @@
   <title>Dr. K Arvinda Sagar – Digital Visiting Card</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen flex flex-col bg-gradient-to-br from-blue-200 via-blue-100 to-green-100 text-gray-800">
+<body class="min-h-screen flex flex-col bg-gradient-to-br from-purple-200 via-blue-100 to-green-100 text-gray-800">
 
   <main class="px-4 sm:px-6 md:px-0 flex-grow">
-    <div class="w-full max-w-md mx-auto mt-4 mb-4 bg-white shadow-xl rounded-3xl overflow-hidden">
+    <div class="w-full max-w-md mx-auto mt-8 sm:mt-12 md:mt-16 mb-4 bg-white shadow-xl rounded-3xl overflow-hidden">
       <div class="p-6">
         
         <!-- Profile Top -->
@@ -187,7 +187,7 @@
     initializeBio();
 
     function shareCard() {
-      const cardLink = "https://StethBook.com"; // Replace with actual card link
+      const cardLink = "https://StethBook.com";
       const message = `Check out Dr. K Arvinda Sagar’s digital card: ${cardLink}`;
 
       navigator.clipboard.writeText(cardLink).then(() => {
