--- a/temp1.html
+++ b/temp1.html
@@ -22,7 +22,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="min-h-screen flex flex-col bg-gradient-to-br from-gray-200 via-blue-100 to-green-100 text-gray-800">
+<body class="min-h-screen flex flex-col bg-gradient-to-br from-purple-200 via-blue-100 to-green-100 text-gray-800">
 
   <main class="px-4 sm:px-6 md:px-0 flex-grow mt-6">
     <div class="w-full max-w-md mx-auto bg-white shadow-xl rounded-3xl overflow-hidden">
